[Feature]: Add Readme, documentation, Tests and Integration tests
Adds
- README.md
- Unit Tests
- Concurrency Integration Test

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=org.sqlite.JDBC
-spring.datasource.url=jdbc:sqlite:db.sqlite3?foreign_keys=on
+spring.datasource.url=jdbc:sqlite:db-test.sqlite3?foreign_keys=on
 spring.datasource.username=
 spring.datasource.password=
 mybatis.configuration.map-underscore-to-camel-case=true
